--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,7 @@ compiler:
 script:
   - dpkg -L libgmp-dev
   - make gmp
+  - $CC -Wall gmp.c -o gmp -lgmp
+  - $CC -Wall -lgmp gmp.c -o gmp
   - make clean
 
